# video2pixelart-se

./: .gitignore  CMakeLists.txt  README.md
src/: api.h++  args.c++  conversion.c++  image_resize.c++  main.c++  main.cpp  settings.h++
